# Transformers_from_scratch

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: training.py
dataset/: Dataset.py
src/models/: DecoderBlock.py  DecoderLayer.py  Embedding.py  EncoderBlock.py  EncoderLayer.py  FeedForward.py  LayerNormalization.py  PositionalEncoding.py  Projection.py  Residual_network.py  Transformer.py  model.py  multiheadattention.py
src/utils/: checkpoints.py  exception.py  logging.py  seed.py
tokenizer/: Tokenizer.py
train/: Train.py
validate/: Validate.py
